# monaco

./: .gitignore  DOCUMENTATION_GAPS.md  DOCUMENTATION_PLAN.md  LICENSE.md  Makefile  README.md  demo.ipynb  example.ipynb  example.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
example/: example.ipynb  example_project.py
monaco/: __init__.py  project.py  task.py  tasks.py
monaco/tests/: test_project.py  test_task.py
scripts/: verify_documentation.py
src/monaco/: __init__.py  cli.py  config.py  console.py  distributions.py  project.py  task.py
src/planaco/: __init__.py  cli.py  config.py  project.py  task.py
src/tests/: test_project.py  test_task.py
tests/: test_cli.py  test_config.py  test_distributions.py  test_project.py  test_refactoring.py  test_task.py
tests/fixtures/: invalid_missing_tasks.yaml  invalid_normal_missing_mean.yaml  invalid_normal_missing_std.yaml  invalid_unknown_dep.yaml  project_with_normal.yaml  project_with_seed.yaml  valid_project.yaml
tutorial/: example.ipynb
