[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monaco"
version = "0.1.2"
description = "Task and project estimation using Monte Carlo simulation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Martijn Wieriks"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "monte-carlo",
    "simulation",
    "estimation",
    "project-management",
    "task-planning",
    "forecasting",
]
dependencies = [
    "click>=7.0",
    "matplotlib>=3.0",
    "seaborn>=0.11",
    "numpy>=1.18",
    "PyYAML>=5.0",
    "networkx>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "mypy>=0.900",
]

[project.scripts]
monaco = "monaco.cli:main"

[project.urls]
Homepage = "https://github.com/sepam/monaco"
Repository = "https://github.com/sepam/monaco"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "numpy.*",
    "click.*",
    "networkx.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
